--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"restify": "4.0.3",
 		"levenshtein": "1.0.5",
 		"mongodb": "2.0.48",
-		"moment": "2.10.6"
+		"moment": "2.10.6",
+		"morgan": "^1.6.1"
 	}
 }
