--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"levenshtein": "1.0.5",
 		"mongodb": "2.0.48",
 		"moment": "2.10.6",
-		"morgan": "^1.6.1"
+		"morgan": "^1.6.1",
+		"node-cache": "3.0.0"
 	}
 }
